--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
 	},
 	"homepage": "https://github.com/LambdaSchool/Server-Testing#readme",
 	"devDependencies": {
+		"cross-env": "^5.2.0",
 		"jest": "^23.6.0",
-		"supertest": "^3.3.0"
+		"nodemon": "^1.19.1",
+		"supertest": "^3.4.2"
 	},
 	"dependencies": {
-		"express": "^4.16.4"
+		"dotenv": "^8.0.0",
+		"express": "^4.16.4",
+		"knex": "^0.17.6",
+		"pg": "^7.11.0",
+		"sqlite3": "^4.0.9"
 	}
 }
